added the blog link and updated CV_link

--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
   <meta name="description" content="Personal Webpage of Eren Mehmet Kiral">
   <meta name="keywords" content="machine learning, automorphic forms, brown university, math, mehmet kiral">
   <meta name="author" content="Eren Mehmet Kiral">
-  <meta name="revised" content="Eren Mehmet Kiral, 21/January/2024">
+  <meta name="revised" content="Eren Mehmet Kiral, 8/June/2025">
 </b></font>
+
+<!-- This loads Google's tracking library -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3Q7M9XHEG5"></script>
+
+<!-- This initializes tracking on your page -->
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-3Q7M9XHEG5');  // Your unique ID goes here
+</script>
 
 <style type="text/css">
 html {
@@ -40,13 +51,15 @@ h1,h2,h3 {
   <tbody>
     <td width="50%">
       <h3> Position</h3>
-	    <p> I am currently a Project Assistant Professor (特任講師), working at Keio University with the 
+	    <p> I am currently a Postdoctoral Researcher, working with the 
 		    <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/math_sci/index.html" target="_blank">Mathematical Sciences Team</a> 
 		    of <a href="https://www.riken.jp/en/research/labs/aip/">RIKEN AIP</a> led by 
 		    <a href="http://www.math.keio.ac.jp/~bannai/en/"> Kenichi Bannai</a>. </p>  
-      <h3>Teaching</h3>
+      <h3>Expository</h3>
+      <p><a href ="blog/blog-index.html">Blog style mathematical vignettes</a> on machine learning.</p>
+
       <p>I gave a lecture series on Public Key Cryptography at RIKEN, Wako Campus as a part of iTHEMS. My Jupyter notebook 
-	  <a href="http://nbviewer.jupyter.org/github/ekiral/cryptography/tree/master/"> lecture notes</a> <br>
+	  <a href="http://nbviewer.jupyter.org/github/ekiral/cryptography/tree/master/"> lecture notes</a>. <br>
       </p>
 	  </td>
     <td width="50%">
@@ -62,9 +75,10 @@ h1,h2,h3 {
 <table>
 	<tbody>
 		<td width="70%">
-			<h3>Research</h3>			I like thinking about probability, entropy, thermodynamics and group actions in the context of machine learning. 
+			<h3>Research</h3>
+			I like thinking about probability, entropy, thermodynamics and group actions in the context of machine learning. 
 			Also on modular forms (including half-integer weight) and their L-functions.
-			My <a href ="CV_Nov_2023_ErenMehmetKiral.pdf"> CV</a>.
+			My <a href ="CV_Jun_2025_ErenMehmetKiral.pdf"> CV</a>.
 			<br/>
 			My Ph.D. advisor is Jeffrey Hoffstein from Brown University, and my postdoctoral mentor is 
 			Matthew Young from Texas A&amp;M University. In Japan I was a JSPS postdoctoral fellow, working with 
@@ -181,18 +195,8 @@ h1,h2,h3 {
 </table>
 <br>
 <div style="text-align: right;">
-<small>Last updated: 21 January 2024<br></small>
+<small>Last updated: 8 June 2025<br></small>
 </div>
 </div> <!-- End content -->
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-45965884-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 </body></html>
