--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ h1,h2,h3 {
 </table>
 	
  <h3>Personal</h3>
-     <p> A place I care deeply <a href="https://nesinkoyleri.org/en/nesin-villages/" target="_blank">about.</a> <br/>
+     <p> A place I care deeply <a href="https://nesinkoyleri.org/en/main-page/" target="_blank">about.</a> <br/>
 	     email: erenmehmetkiral@protonmail.com </p>
 	
 <table>
